--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 include_directories(include)
 include_directories(include/cynthia-perception)
-add_subdirectory(include/cynthia-perception)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
 add_executable(Cynthia_perception
-        include/cynthia-perception/hello-world.cpp)
+        include/cynthia-perception/hello-world.cpp src/hello2.cpp src/hello2.cpp)
